Fix margin I broke on mobile, whoops

--- a/src/components/belk-header/style/default.scss
+++ b/src/components/belk-header/style/default.scss
@@ -151,6 +151,10 @@
       justify-content: space-between;
     }
 
+    .mobile-search-trigger {
+      margin-left: auto;
+    }
+
     sh-button.close-search {
       max-width: 0;
       order: 2;
